WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
196930
process-swap-on-navigation error when loading blocked websites
https://bugs.webkit.org/show_bug.cgi?id=196930
Summary
process-swap-on-navigation error when loading blocked websites
Justin Cohen
Reported
2019-04-15 13:41:40 PDT
Steps: - Enable content restrictions and set web content to 'allowed websites only' (e.g. disney.com) - Visit disney.com - Visit cnn.com In WKWebView, I see WebKit print the following error: [ProcessSwapping] 0x117324160 - ProvisionalPageProxy::didFailProvisionalLoadForFrame: pageID = 2, frameID = 1, navigationID = 5 I see a didFailProvisionalNavigation callback, but no didFinishNavigation and I don't see the built in error page (You cannot browse this page at "cnn.com" because it is restricted.) I still see disney.com If I immediately load cnn.com in a new WKWebView, I do see the proper error page. MobileSafari is also inconsistent. If you visit cnn.com on a new page you see the correct restricted error. If you visit disney.com first, you see (Safari cannot open the page. The error was; "The URL was blocked by a content filter."
Attachments
WIP Patch
(1.66 KB, patch)
2019-04-15 16:53 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
WIP Patch
(3.85 KB, patch)
2019-04-16 08:44 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews103 for mac-highsierra
(3.13 MB, application/zip)
2019-04-16 09:47 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews106 for mac-highsierra-wk2
(2.76 MB, application/zip)
2019-04-16 10:01 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews124 for ios-simulator-wk2
(2.66 MB, application/zip)
2019-04-16 13:41 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews117 for mac-highsierra
(4.11 MB, application/zip)
2019-04-16 15:44 PDT
,
EWS Watchlist
no flags
Details
Patch
(6.59 KB, patch)
2019-06-06 15:48 PDT
,
Andy Estes
no flags
Details
Formatted Diff
Diff
Part 1
(6.59 KB, patch)
2019-06-06 22:38 PDT
,
Andy Estes
no flags
Details
Formatted Diff
Diff
Part 2
(5.30 KB, patch)
2019-06-06 22:46 PDT
,
Andy Estes
no flags
Details
Formatted Diff
Diff
Show Obsolete
(7)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-04-15 14:48:48 PDT
<
rdar://problem/49918639
>
Radar WebKit Bug Importer
Comment 2
2019-04-15 14:48:59 PDT
<
rdar://problem/49918644
>
Chris Dumez
Comment 3
2019-04-15 16:53:04 PDT
Comment hidden (obsolete)
Created
attachment 367477
[details]
WIP Patch
Chris Dumez
Comment 4
2019-04-15 16:53:31 PDT
<
rdar://problem/47819301
>
Chris Dumez
Comment 5
2019-04-16 08:44:06 PDT
Comment hidden (obsolete)
Created
attachment 367537
[details]
WIP Patch
EWS Watchlist
Comment 6
2019-04-16 09:47:44 PDT
Comment hidden (obsolete)
Comment on
attachment 367537
[details]
WIP Patch
Attachment 367537
[details]
did not pass mac-ews (mac): Output:
https://webkit-queues.webkit.org/results/11887104
New failing tests: contentfiltering/block-after-response-then-deny-unblock.html contentfiltering/block-after-finished-adding-data-then-deny-unblock.html contentfiltering/block-after-will-send-request-then-allow-unblock.html contentfiltering/block-after-add-data.html contentfiltering/block-after-add-data-then-deny-unblock.html contentfiltering/block-after-add-data-then-allow-unblock.html contentfiltering/block-after-response.html contentfiltering/block-after-response-then-allow-unblock.html contentfiltering/block-after-will-send-request.html contentfiltering/block-after-finished-adding-data.html contentfiltering/block-after-will-send-request-then-deny-unblock.html contentfiltering/block-after-finished-adding-data-then-allow-unblock.html
EWS Watchlist
Comment 7
2019-04-16 09:47:46 PDT
Comment hidden (obsolete)
Created
attachment 367541
[details]
Archive of layout-test-results from ews103 for mac-highsierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-highsierra Platform: Mac OS X 10.13.6
EWS Watchlist
Comment 8
2019-04-16 10:01:33 PDT
Comment hidden (obsolete)
Comment on
attachment 367537
[details]
WIP Patch
Attachment 367537
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
https://webkit-queues.webkit.org/results/11887173
New failing tests: contentfiltering/block-after-response-then-deny-unblock.html contentfiltering/block-after-finished-adding-data-then-deny-unblock.html contentfiltering/block-after-will-send-request-then-allow-unblock.html contentfiltering/block-after-add-data.html contentfiltering/block-after-add-data-then-deny-unblock.html contentfiltering/block-after-add-data-then-allow-unblock.html contentfiltering/block-after-response.html contentfiltering/block-after-response-then-allow-unblock.html contentfiltering/block-after-will-send-request.html contentfiltering/block-after-finished-adding-data.html contentfiltering/block-after-will-send-request-then-deny-unblock.html contentfiltering/block-after-finished-adding-data-then-allow-unblock.html
EWS Watchlist
Comment 9
2019-04-16 10:01:35 PDT
Comment hidden (obsolete)
Created
attachment 367542
[details]
Archive of layout-test-results from ews106 for mac-highsierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-highsierra-wk2 Platform: Mac OS X 10.13.6
EWS Watchlist
Comment 10
2019-04-16 13:41:12 PDT
Comment hidden (obsolete)
Comment on
attachment 367537
[details]
WIP Patch
Attachment 367537
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
https://webkit-queues.webkit.org/results/11888924
New failing tests: contentfiltering/block-after-response-then-deny-unblock.html contentfiltering/block-after-finished-adding-data-then-deny-unblock.html contentfiltering/block-after-will-send-request-then-allow-unblock.html contentfiltering/block-after-add-data.html contentfiltering/block-after-add-data-then-deny-unblock.html contentfiltering/block-after-add-data-then-allow-unblock.html contentfiltering/block-after-response.html contentfiltering/block-after-response-then-allow-unblock.html contentfiltering/block-after-will-send-request.html contentfiltering/block-after-finished-adding-data.html contentfiltering/block-after-will-send-request-then-deny-unblock.html contentfiltering/block-after-finished-adding-data-then-allow-unblock.html
EWS Watchlist
Comment 11
2019-04-16 13:41:14 PDT
Comment hidden (obsolete)
Created
attachment 367559
[details]
Archive of layout-test-results from ews124 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews124 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.6
EWS Watchlist
Comment 12
2019-04-16 15:44:18 PDT
Comment hidden (obsolete)
Comment on
attachment 367537
[details]
WIP Patch
Attachment 367537
[details]
did not pass mac-debug-ews (mac): Output:
https://webkit-queues.webkit.org/results/11890304
New failing tests: http/tests/contentfiltering/block-after-redirect.html contentfiltering/block-after-response-then-deny-unblock.html contentfiltering/block-after-finished-adding-data-then-deny-unblock.html contentfiltering/block-after-will-send-request-then-allow-unblock.html contentfiltering/block-after-add-data.html contentfiltering/block-after-add-data-then-deny-unblock.html contentfiltering/block-after-add-data-then-allow-unblock.html contentfiltering/block-after-response.html contentfiltering/block-after-response-then-allow-unblock.html contentfiltering/block-after-will-send-request.html contentfiltering/block-after-finished-adding-data.html contentfiltering/block-after-will-send-request-then-deny-unblock.html contentfiltering/block-after-finished-adding-data-then-allow-unblock.html
EWS Watchlist
Comment 13
2019-04-16 15:44:20 PDT
Comment hidden (obsolete)
Created
attachment 367584
[details]
Archive of layout-test-results from ews117 for mac-highsierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews117 Port: mac-highsierra Platform: Mac OS X 10.13.6
Andy Estes
Comment 14
2019-06-06 15:48:00 PDT
Comment hidden (obsolete)
Created
attachment 371531
[details]
Patch
Chris Dumez
Comment 15
2019-06-06 15:53:34 PDT
Comment on
attachment 371531
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=371531&action=review
r=me
> Source/WebCore/loader/ContentFilter.h:65 > + bool willHandleProvisionalLoadFailure(const ResourceError&);
nit: Should probably be a const method.
Andy Estes
Comment 16
2019-06-06 22:38:00 PDT
Created
attachment 371562
[details]
Part 1
Andy Estes
Comment 17
2019-06-06 22:46:35 PDT
Created
attachment 371563
[details]
Part 2
WebKit Commit Bot
Comment 18
2019-06-06 23:09:46 PDT
Comment on
attachment 371562
[details]
Part 1 Clearing flags on attachment: 371562 Committed
r246190
: <
https://trac.webkit.org/changeset/246190
>
WebKit Commit Bot
Comment 19
2019-06-07 08:44:10 PDT
Comment on
attachment 371563
[details]
Part 2 Clearing flags on attachment: 371563 Committed
r246201
: <
https://trac.webkit.org/changeset/246201
>
WebKit Commit Bot
Comment 20
2019-06-07 08:44:12 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug