Improve navigation to restricted web sites on iOS 12.2 with slim-nav.

iOS 12.2 has a bug where navigation to restricted websites does not
work correctly (https://bugs.webkit.org/show_bug.cgi?id=196930).

This CL works around multiple problems to the point where navigation to
restricted web sites is usable (load restricted URLs from NTP, from
another web page, reload and backforward navigation).

There are still a few minor bugs that were not fixed by this CL:
 - DCHECK inside ErrorRetryStateMachine::DidFinishNavigation
 - Reload and Back - Forward navigation to restricted URLs create
   duplicate navigation items
 - Restricted website error is not displayed until page reload
These are minor bugs which are hard to fix and probably not worth
the efforts.

Bug: 950488, 954332
Change-Id: I01642a5a69cbfe55373e35a65058fe7aa6706223
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1577875
Reviewed-by: Justin Cohen <justincohen@chromium.org>
Commit-Queue: Eugene But <eugenebut@chromium.org>
Auto-Submit: Eugene But <eugenebut@chromium.org>
Cr-Commit-Position: refs/heads/master@{#653754}

Former-commit-id: 8cf90323cb27a96508e453a638619b1395d08225